--- a/.gitignore
+++ b/.gitignore
@@ -217,4 +217,4 @@ $RECYCLE.BIN/
 
 # Fin de https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
 
-node_modules
+.node_modules
